welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: value decalage is not a member of Int
			var o:Int = w decalage % ( T.length )
                                      ^